get movie list by genre
